<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prak"
    tools:context="com.example.login.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="235dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="440dp"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="317dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="243dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="86dp"
        android:text="@string/new_user_signup_here" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="143dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="#EB2C1E"
        android:textColorLink="#E2D34B"
        android:textSize="25sp"
        android:textStyle="bold" />




</RelativeLayout>

